[package]
name = "l-systems-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if="0.1.2"
wasm-bindgen = {version="0.2.78",features = ["serde-serialize"]}
serde_json="1.0.73"
serde = {version = "1.0.132", features = ["derive"]}
console_error_panic_hook = { version = "0.1.7" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "console"
]
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true